project(reflect-cpp-modules-tests)

add_executable(
    reflect-cpp-modules-tests
    test_modules.cpp
)

target_link_libraries(reflect-cpp-modules-tests PRIVATE reflectcpp)
target_compile_definitions(reflect-cpp-modules-tests PRIVATE
    REFLECTCPP_MODULE_TEST_AVRO=$<BOOL:${REFLECTCPP_AVRO}>
    REFLECTCPP_MODULE_TEST_BOOST_SERIALIZATION=$<BOOL:${REFLECTCPP_BOOST_SERIALIZATION}>
    REFLECTCPP_MODULE_TEST_BSON=$<BOOL:${REFLECTCPP_BSON}>
    REFLECTCPP_MODULE_TEST_CAPNPROTO=$<BOOL:${REFLECTCPP_CAPNPROTO}>
    REFLECTCPP_MODULE_TEST_CBOR=$<BOOL:${REFLECTCPP_CBOR}>
    REFLECTCPP_MODULE_TEST_CEREAL=$<BOOL:${REFLECTCPP_CEREAL}>
    REFLECTCPP_MODULE_TEST_CSV=$<BOOL:${REFLECTCPP_CSV}>
    REFLECTCPP_MODULE_TEST_FLEXBUFFERS=$<BOOL:${REFLECTCPP_FLEXBUFFERS}>
    REFLECTCPP_MODULE_TEST_MSGPACK=$<BOOL:${REFLECTCPP_MSGPACK}>
    REFLECTCPP_MODULE_TEST_PARQUET=$<BOOL:${REFLECTCPP_PARQUET}>
    REFLECTCPP_MODULE_TEST_TOML=$<BOOL:${REFLECTCPP_TOML}>
    REFLECTCPP_MODULE_TEST_UBJSON=$<BOOL:${REFLECTCPP_UBJSON}>
    REFLECTCPP_MODULE_TEST_XML=$<BOOL:${REFLECTCPP_XML}>
    REFLECTCPP_MODULE_TEST_YAML=$<BOOL:${REFLECTCPP_YAML}>
    REFLECTCPP_MODULE_TEST_YAS=$<BOOL:${REFLECTCPP_YAS}>
)
set_target_properties(reflect-cpp-modules-tests PROPERTIES CXX_SCAN_FOR_MODULES ON)

add_test(NAME modules.json_roundtrip COMMAND reflect-cpp-modules-tests)
